# ==================================================================================================
# Filename : ./slides/Makefile
# ----------------------------
#
# - Create the PDF file.
#
# - Create the PNG files from the PDF file.
#
# - Process the PNG files.
# ==================================================================================================
# Notes
# -----
#
# Refer to Note 1) within ../doc/Makefile_notes.txt
# ==================================================================================================

SUBDIRS    = pdf \
             png

EXTRA_DIST = latex


all             :


displaySettings :

	${MAKE} -f Makefile_displaySettings
